add rbac roles to allow creating workspaces

--- a/coder-kubesail.yaml
+++ b/coder-kubesail.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: coder
   annotations:
-    kubesail.com/template: matifali/coder:v58
+    kubesail.com/template: matifali/coder:v63
     kubesailEditorUid: 908d11c6-a488-4b3e-b76f-13e4512b8509
 spec:
   replicas: 1
@@ -14,6 +14,7 @@ spec:
   selector:
     matchLabels:
       app: coder
+  ServiceAccountName: coder
   template:
     metadata:
       labels:
@@ -51,7 +52,7 @@ metadata:
     kubesailEditorUid: 9ca37c5a-586c-4004-a836-f013b9358bfc
     cert-manager.io/cluster-issuer: letsencrypt
     kubernetes.io/tls-acme: "true"
-    kubesail.com/template: matifali/coder:v58
+    kubesail.com/template: matifali/coder:v63
     nginx.ingress.kubernetes.io/proxy-body-size: 500m
 spec:
   tls:
@@ -87,7 +88,7 @@ metadata:
     app: coder
   annotations:
     kubesailEditorUid: d2ad21aa-de51-40e0-abac-299f8f603641
-    kubesail.com/template: matifali/coder:v58
+    kubesail.com/template: matifali/coder:v63
 spec:
   ports:
     - name: http
@@ -103,10 +104,45 @@ metadata:
   name: coder-data
   annotations:
     kubesailEditorUid: 02205648-1737-4c2c-a663-8ea51ab1b028
-    kubesail.com/template: matifali/coder:v58
+    kubesail.com/template: matifali/coder:v63
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: coder
+  annotations:
+    kubesailEditorUid: 02205648-1737-4c2c-a663-8ea51ab1b028
+    kubesail.com/template: matifali/coder:v63
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: coder
+  annotations:
+    kubesailEditorUid: 02205648-1737-4c2c-a663-8ea51ab1b028
+    kubesail.com/template: matifali/coder:v63
+rules:
+  - apiGroups: [ "" ]
+    resources: [ "pods" ]
+    verbs: [ "*" ]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: coder
+  annotations:
+    kubesailEditorUid: 02205648-1737-4c2c-a663-8ea51ab1b028
+    kubesail.com/template: matifali/coder:v63
+subjects:
+  - kind: ServiceAccount
+    name: coder
+roleRef:
+  kind: Role
+  name: coder
+  apiGroup: rbac.authorization.k8s.io
